--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,12 @@
   padding: 0;
   box-sizing: border-box;
 }
+/* globals.css */
+.toast-title {
+  font-weight: 1700 !important;
+  color: #ef4444 !important; /* Tailwind red-500 */
+}
+
 
 /* ======== stream css overrides ======== */
 .str-video__call-stats {
